# bpcontext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  db.rs  fetch.rs  indexdir.rs  main.rs  promote.rs  retrieval.rs  search_memory.rs  search_model.rs  stats.rs  truncate.rs
src/context/: advisor.rs  ledger.rs  mod.rs
src/embedder/: mod.rs  model.rs  pool.rs
src/executor/: mod.rs  runner.rs
src/hooks/: mod.rs  posttooluse.rs  precompact.rs  pretooluse.rs
src/knowledge/: db.rs  enrichment.rs  filter.rs  mod.rs  search.rs  sync.rs
src/mcp/: server.rs  tools.rs  transport.rs
src/session/: events.rs  mod.rs  snapshot.rs
src/store/: chunker.rs  mod.rs  schema.rs  search.rs
