[package]
name = "bpcontext"
version = "0.1.0"
edition = "2021"
description = "Context window optimization CLI and MCP server for Claude Code"
license = "MIT"
repository = "https://github.com/Blakethefn/bpcontext"
homepage = "https://github.com/Blakethefn/bpcontext"
authors = ["Blake Paulson"]
keywords = ["context", "llm", "mcp", "indexing", "claude"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
cuda = ["candle-core/cuda"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# SQLite with FTS5
rusqlite = { version = "0.39", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config & paths
dirs = "6"

# Utils
anyhow = "1"
chrono = "0.4"
colored = "3"
regex = "1"
sha2 = "0.10"

# Fuzzy matching
strsim = "0.11"

# Directory walking (gitignore-aware)
ignore = "0.4"

# HTTP fetch
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
htmd = "0.1"

# Embeddings (Candle ML)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"

[dev-dependencies]
tempfile = "3"
